--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.1",
     "ejs": ">=3.1.7",
     "express": "^4.17.2",
+    "i18next": "^21.6.16",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "toastr": "^2.1.4"
